# V2X-Intersection-Assistant-Cooperative-Vehicle-Safety

./: README.md
.github/workflows/: ci.yml
docs/: TEST_CASES.md  architecture.md
firmware/: project.yml
firmware/bootloader/: dual_bank_boot.c
firmware/include/: brake_controller.h  kalman.h  v2x_codec.h
firmware/src/: brake_controller.c  kalman.c  v2x_codec.c
firmware/test/: test_brake_controller.c  test_cases.c  test_kalman.c  test_v2x_codec.c
ros2_ws/src/v2x_conflict_detector/: CMakeLists.txt  package.xml
ros2_ws/src/v2x_conflict_detector/include/v2x_conflict_detector/: ttc.hpp
ros2_ws/src/v2x_conflict_detector/launch/: v2x.launch.py
ros2_ws/src/v2x_conflict_detector/src/: conflict_node.cpp  ttc.cpp
ros2_ws/src/v2x_conflict_detector/test/: test_ttc.cpp
ros2_ws/src/v2x_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/v2x_msgs/msg/: BrakeCommand.msg  VehicleState.msg
